--- a/evie_mini_project_8/style.css
+++ b/evie_mini_project_8/style.css
@@ -1,9 +1,15 @@
 .boxdiv{
-  height: 50px;
+  height: 130px;
   width:1200px;
   background-color: black;
 }
 .text{
+  font-size: 15px;
   color: white;
+  margin: 5px;
+}
+.songTitle{
+  font-size: 20px;
+  color: lightYellow;
   margin: 5px;
 }
