--- a/project_B/gallerystyle.css
+++ b/project_B/gallerystyle.css
@@ -3,7 +3,7 @@ background-color: black;
 box1{
   margin: 0px;
 }
-.img-container img{
+img{
   width:600px;
   height:200px;
   opacity: 0.3;
@@ -69,51 +69,36 @@ background-color: darkGrey;
   font-size: 50px;
   font-family: cursive;
 }
-.box{
-  display: inline-flex;
-  margin-top:20px;
-  width: 100%;
-  height:700px;
-  background-color: lightGrey;
+* {
+  box-sizing: border-box;
 }
-.box img{
-  width: 600px;
-  height: 700px;
+.column{
+  float: left;
+  width: 33.3%;
+  padding: 15px;
+}
+.row::after{
+  clear: both;
+  display: table;
+}
+.column img{
   opacity: 1;
-  align-self: left;
+  height:500px;
 }
-.text4{
-  text-indent: 70px;
-  color: red;
-  text-align: justify;
-  font-size: 27.5px;
-  font-family: "copperplate";
-  margin:15px;
-}
-.buttons {
-  display: block;
-  width: 100%;
-  height: 50px;
-  background-color: grey;
+h1{
   color: white;
-  font-size: 30px;
-  font-family: "copperplate";
-  text-align: center;
-  margin: 15px;
-}
-.box2{
-  display: flex;
-  margin-top:20px;
-  width: 100%;
-  height:350px;
-  background-color: lightGrey;
-  color: black;
-  text-align: left;
+  margin: 25px;
   font-size: 25px;
   font-family: "copperplate";
-  margin:15px;
+  text-align: center;
 }
-img{
-  width:500px;
-  height:500px;
+h1 a{
+  color: grey;
+  background-color: transparent;
+  text-decoration: none;
+}
+h1 a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
 }
