--- a/project_B/p5style.css
+++ b/project_B/p5style.css
@@ -3,7 +3,7 @@ background-color: black;
 box1{
   margin: 0px;
 }
-.img-container img{
+img{
   width:600px;
   height:200px;
   opacity: 0.3;
@@ -55,7 +55,7 @@ li a:hover {
 background-color: darkGrey;
 }
 .bannerDiv{
-  margin: 0px;
+  margin-bottom:15px;
   width:100%;
   height: 100px;
   background-color: lightgrey;
@@ -69,51 +69,16 @@ background-color: darkGrey;
   font-size: 50px;
   font-family: cursive;
 }
-.box{
-  display: inline-flex;
-  margin-top:20px;
-  width: 100%;
-  height:700px;
-  background-color: lightGrey;
+.canvas{
+  position: relative;
+  color:black;
 }
-.box img{
-  width: 600px;
-  height: 700px;
-  opacity: 1;
-  align-self: left;
+h1{
+  color:white;
+  font-size: 20px;
+  font-family: "copperplate";
 }
 .text4{
-  text-indent: 70px;
-  color: red;
-  text-align: justify;
-  font-size: 27.5px;
+  font-size:15px;
   font-family: "copperplate";
-  margin:15px;
-}
-.buttons {
-  display: block;
-  width: 100%;
-  height: 50px;
-  background-color: grey;
-  color: white;
-  font-size: 30px;
-  font-family: "copperplate";
-  text-align: center;
-  margin: 15px;
-}
-.box2{
-  display: flex;
-  margin-top:20px;
-  width: 100%;
-  height:350px;
-  background-color: lightGrey;
-  color: black;
-  text-align: left;
-  font-size: 25px;
-  font-family: "copperplate";
-  margin:15px;
-}
-img{
-  width:500px;
-  height:500px;
 }
